fix scrollbar?

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,6 +16,7 @@
     padding-top: 10px;
     grid-auto-flow: column;
     overflow-x: auto;
+    scrollbar-width: none;
 }
 
 .class-merge {
